@@ -422,6 +422,7 @@ constants.gui_strings = {
   per_second_suffix = { "gui.rb-per-second-suffix" },
   place_as_equipment_result = { "gui.rb-place-as-equipment-result" },
   placed_by = { "gui.rb-placed-by" },
+  placed_in = { "gui.rb-placed-in" },
   place_result = { "gui.rb-place-result" },
   pollution_bonus = { "description.pollution-bonus" },
   prerequisite_of = { "gui.rb-prerequisite-of" },
@@ -710,6 +711,7 @@ constants.pages = {
       },
     },
     { type = "table", source = "equipment_properties" },
+    { type = "list_box", source = "placed_in" },
     { type = "list_box", source = "can_burn" },
     { type = "list_box", source = "fuel_categories", default_state = "hidden" },
     { type = "list_box", source = "equipment_categories", default_state = "hidden" },
