@@ -147,6 +147,7 @@ rb-per-second-suffix=/ s
 rb-pin-instruction=Keep open
 rb-place-as-equipment-result=Place as equipment result
 rb-placed-by=Placed by
+rb-placed-in=Placed in
 rb-place-result=Place result
 rb-prerequisite-of=Prerequisite of
 rb-prerequisites=Prerequisites
